5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1734_2505.log
== SUBMITION (2019-05-14 18:09:27) 
-- CODE:
from math import*
angulo=eval(input("digite o numero:"))
k=int(input("digite o numero:"))
soma=0
a=1
e=0
while(e<k):
	sinal=(-1)**e
	seno=sinal*((angulo**a)/factorial(b))
	soma=soma+seno
	a=a+2
	e=e+1
print(round(soma,10))
-- EXECUTION TIME:
1.49586
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2505/main.py", line 9, in <module>
    seno=sinal*((angulo**a)/factorial(b))
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:09:43) 
-- CODE:
from math import*
angulo=eval(input("digite o numero:"))
k=int(input("digite o numero:"))
soma=0
a=1
e=0
while(e<k):
	sinal=(-1)**e
	seno=sinal*((angulo**a)/factorial(b))
	soma=soma+seno
	a=a+2
	e=e+1
print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    seno=sinal*((angulo**a)/factorial(b))
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:11:32) 
-- CODE:
from math import*
angulo=eval(input("digite o numero:"))
k=int(input("digite o numero:"))
soma=0
a=1
e=0
while(e<k):
	sinal=(-1)**e
	sen= sinal*((angulo**a)/factorial(b))
	soma= soma+sen
	a=a+2
	e=e+1
print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    sen= sinal*((angulo**a)/factorial(b))
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:12:07) 
-- CODE:
from math import*
angulo=eval(input("digite o numero:"))
k=int(input("digite o numero:"))
soma=0
a=1
e=0
while(e<k):
	sinal=(-1)**e
	sen= sinal*((angulo**a)/factorial(a))
	soma= soma+sen
	a=a+2
	e=e+1
print(round(soma,10))
-- EXECUTION TIME:
1.70948
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
digite o numero:digite o numero:1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
digite o numero:digite o numero:-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
digite o numero:digite o numero:0.8662952838
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:12:10) 
-- CODE:
from math import*
angulo=eval(input("digite o numero:"))
k=int(input("digite o numero:"))
soma=0
a=1
e=0
while(e<k):
	sinal=(-1)**e
	sen= sinal*((angulo**a)/factorial(a))
	soma= soma+sen
	a=a+2
	e=e+1
print(round(soma,10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:12:26) 
-- CODE:
from math import*
angulo=eval(input("digite o numero:"))
k=int(input("digite o numero:"))
soma=0
a=1
e=0
while(e<k):
	sinal=(-1)**e
	sen= sinal*((angulo**a)/factorial(a))
	soma= soma+sen
	a=a+2
	e=e+1
print(round(soma,10))
-- EXECUTION TIME:
0.777613
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
